--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,49 +18,66 @@
 <div class="container">
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h2> Jak dojadę - Prolog</h2>
-        <form action="#" th:action="@{'/route'}" th:method="POST" th:object="${search}">
+        <h2> Credit risk </h2>
+        <form action="#" th:action="@{'/calculate'}" th:method="POST" th:object="${input}">
+            <div class="form-group blu-margin">
+                Credit value--------------<input type="number" id="creditAmountInput" name="creditAmountInput" th:value="*{creditAmount}" /> EUR
+            </div>
+
+            <div class="form-group blu-margin">
+                Credit duration(days)----<input type="number" id="durationInput" name="durationInput" th:value="*{duration}" /> EUR
+            </div>
+
+            <div class="form-group blu-margin">
+                <select class="form-control" id="purposeDropDown">
+                    <option value="0">Select purpose</option>
+                    <option th:each="purpose : ${purposes}" th:value="${purpose}" th:text="${purpose}"></option>
+                </select>
+            </div>
+
             <div class="form-group blu-margin" >
-                <select class="form-control" th:field="*{startBusStop}" id="startBusStopDropDown">
-                    <option value="0">Select starting point</option>
-                    <option th:each="busStop : ${busStops}" th:value="${busStop.name}" th:text="${busStop}"></option>
+                <select class="form-control" id="ageDropDown">
+                    <option value="0">Select age</option>
+                    <option th:each="age : ${ages}" th:value="${age}" th:text="${age}"></option>
                 </select>
             </div>
 
             <div class="form-group blu-margin">
-                <select class="form-control" th:field="*{stopBusStop}" id="stopBusStopDropDown">
-                    <option value="0">Select stop point</option>
-                    <option th:each="busStop : ${busStops}" th:value="${busStop.name}" th:text="${busStop}"></option>
+                <select class="form-control" id="sexDropDown">
+                    <option value="0">Select sex</option>
+                    <option th:each="sex : ${sexs}" th:value="${sex}" th:text="${sex}"></option>
                 </select>
             </div>
-            <button type="submit" id="submitButton">Search</button>
+
+            <div class="form-group blu-margin">
+                <select class="form-control" id="housingDropDown">
+                    <option value="0">Select housing</option>
+                    <option th:each="housing : ${housings}" th:value="${housing}" th:text="${housing}"></option>
+                </select>
+            </div>
+
+            <div class="form-group blu-margin">
+                <select class="form-control" id="jobDropDown">
+                    <option value="0">Select job</option>
+                    <option th:each="job : ${jobs}" th:value="${job}" th:text="${job}"></option>
+                </select>
+            </div>
+
+            <div class="form-group blu-margin">
+                What is your checking account's balance?<input type="number" id="checkingInput" name="checkingInput" th:value="*{checkingAccounts}" /> EUR
+            </div>
+
+            <div class="form-group blu-margin">
+                What is your savings account's balance ??<input type="number" id="savingInput" name="savingInput" th:value="*{savingAccounts}" /> EUR
+            </div>
+
+
+            <button type="submit" id="submitButton">Calculate Credit Risk</button>
         </form>
 
-
-        <table>
-            <thead>
-            <tr>
-                <th> Time </th>
-                <th> Route </th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:if="${results.empty}">
-                <td colspan="2"> No routes found!</td>
-            </tr>
-            <tr th:each="result : ${results}">
-                <td><span th:text="${result.time}"> Time </span></td>
-                <td><span th:text="${result.busStops}"> Bus stops </span></td>
-                <td><span th:text="${result.listOfLines}"> List of lines </span></td>
-            </tr>
-            </tbody>
-        </table>
-
-        <div th:if="${isMore}">
-            <form action="#" th:action="@{'/more'}" th:method="GET">
-                <button type="submit" id="submitButton2">Show more</button>
-            </form>
-        </div>
+        <h2>
+            <span th:text="'Result ' + ${result}"></span>
+        </h2>
     </div>
 </div> <!-- /container -->
 <!-- Bootstrap core JavaScript
